--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "dependencies": {
         "async": "^1.3.0",
         "zcore-lib": "git://github.com/zcoinofficial/zcore-lib.git",
-        "bitcoind-rpc-zcoin": "git://github.com/zcoinofficial/bitcoind-rpc-zcoin.git",
+        "bitcoind-rpc-zcoin": "git://github.com/zcoinofficial/bitcoind-rpc-zcoin.git#testnet-utils",
         "bitcore-p2p-zcoin": "git://github.com/zcoinofficial/bitcore-p2p-zcoin.git",
         "body-parser": "^1.13.3",
         "colors": "^1.1.2",
