Github repo has been changed

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "main": "./index.js",
     "repository": {
         "type": "git",
-        "url": "git@github.com:zcoinofficial/bitcore-node-zcoin.git#refactor-mtp"
+        "url": "git@github.com:firoorg/bitcore-node-zcoin.git#refactor-mtp"
     },
-    "homepage": "https://github.com/zcoinofficial/bitcore-node-zcoin",
+    "homepage": "https://github.com/firoorg/bitcore-node-zcoin",
     "bugs": {
-        "url": "https://github.com/zcoinofficial/bitcore-node-zcoin/issues"
+        "url": "https://github.com/firoorg/bitcore-node-zcoin/issues"
     },
     "contributors": [
         "Christopher Jeffrey",
@@ -34,9 +34,9 @@
     ],
     "dependencies": {
         "async": "^1.3.0",
-        "zcore-lib": "git://github.com/zcoinofficial/zcore-lib.git",
-        "bitcoind-rpc-zcoin": "git://github.com/zcoinofficial/bitcoind-rpc-zcoin.git",
-        "bitcore-p2p-zcoin": "git://github.com/zcoinofficial/bitcore-p2p-zcoin.git",
+        "zcore-lib": "git://github.com/firoorg/zcore-lib.git",
+        "bitcoind-rpc-zcoin": "git://github.com/firoorg/bitcoind-rpc-zcoin.git",
+        "bitcore-p2p-zcoin": "git://github.com/firoorg/bitcore-p2p-zcoin.git",
         "body-parser": "^1.13.3",
         "colors": "^1.1.2",
         "commander": "^2.8.1",
