--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "main": "./index.js",
     "repository": {
         "type": "git",
-        "url": "git@github.com:firoorg/bitcore-node-zcoin.git#refactor-mtp"
+        "url": "git@github.com:firoorg/bitcore-node-zcoin.git"
     },
     "homepage": "https://github.com/firoorg/bitcore-node-zcoin",
     "bugs": {
